fix submit button on mobile

--- a/styles.css
+++ b/styles.css
@@ -46,25 +46,27 @@ h1 {
 }
 
 .button {
-    display: inline-block;
-    white-space: nowrap;
-    height: 40px;
-    line-height: 42px;
-    margin-right: 5px;
-    padding: 0 22px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    font-style: normal;
-    font-size: 14px;
-    cursor: pointer;
-    border: 0;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    vertical-align: top;
-    -webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
+  background: #3A3A3A;
+  color: #FFF;
+  display: inline-block;
+  white-space: nowrap;
+  height: 42px;
+  line-height: 42px;
+  margin-right: 5px;
+  padding: 2 22px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 14px;
+  cursor: pointer;
+  border: 0;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  vertical-align: top;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
 }
 
 .button:hover {
